--- a/beyond-parent/pom.xml
+++ b/beyond-parent/pom.xml
@@ -217,5 +217,6 @@
   <modules>
     <module>beyond</module>
     <module>beyond-chat</module>
+    <module>beyond-redis</module>
   </modules>
 </project>
