--- a/beyond-parent/beyond-redis/pom.xml
+++ b/beyond-parent/beyond-redis/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0</version>
   </parent>
   <groupId>com.beyond.net</groupId>
-  <artifactId>beyond-chat</artifactId>
+  <artifactId>beyond-redis</artifactId>
   <version>1.0</version>
-  <name>beyond-chat</name>
+  <name>beyond-redis</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
