--- a/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
+++ b/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 		/WEB-INF/applicationContext.xml
-		/WEB-INF/spring-bean.xml
+		/WEB-INF/spring-redis.xml
 		</param-value>
 	</context-param>
 
