--- a/beyond-parent/pom.xml
+++ b/beyond-parent/pom.xml
@@ -37,7 +37,7 @@
 	</repositories>
 
 	<properties>
-		<spring.version>4.2.4.RELEASE</spring.version>
+		<spring.version>4.3.9.RELEASE</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 	</properties>
@@ -102,7 +102,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>3.2.9.RELEASE</version>
+			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
