--- a/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
+++ b/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-		/WEB-INF/applicationContext.xml
-		/WEB-INF/spring-redis.xml
+		classpath:applicationContext.xml
+		classpath:spring-redis.xml
 		</param-value>
 	</context-param>
 
@@ -22,7 +22,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring-servlet.xml</param-value>
+			<param-value>classpath:spring-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 		<async-supported>true</async-supported>
