修改日志级别

--- a/beyond-parent/beyond/src/main/resources/jdbc.properties
+++ b/beyond-parent/beyond/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://47.95.199.141:3306/date
+jdbc_url=jdbc:mysql://localhost:3306/beyond
 jdbc_username=root
-jdbc_password=rootDate365
+jdbc_password=root
 
