--- a/beyond-parent/pom.xml
+++ b/beyond-parent/pom.xml
@@ -234,6 +234,18 @@
 			<version>1.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-core</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-runtime</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+
 	</dependencies>
 	<modules>
 		<module>beyond</module>
