--- a/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
+++ b/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<param-value>
 		classpath:applicationContext.xml
 		classpath:spring-redis.xml
+		classpath:spring-threadPool.xml
 		</param-value>
 	</context-param>
 
