--- a/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
+++ b/beyond-parent/beyond/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 		classpath:applicationContext.xml
 		classpath:spring-redis.xml
 		classpath:spring-threadPool.xml
+		classpath:spring-activeMQ.xml
 		</param-value>
 	</context-param>
 
