--- a/beyond-parent/pom.xml
+++ b/beyond-parent/pom.xml
@@ -22,6 +22,17 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>nexus</id>
+			<name>nexus</name>
+			<url>http://localhost:8083/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<properties>
@@ -187,10 +198,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.json</groupId>
-			<artifactId>javax.json</artifactId>
-			<version>1.0</version>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.json</artifactId>
+		    <version>1.1.2</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>log4j</groupId>
