--- a/beyond-parent/beyond/src/main/resources/log4j.properties
+++ b/beyond-parent/beyond/src/main/resources/log4j.properties
@@ -1,15 +1,15 @@
 #high to low ERROR WARN INFO DEBUG
-log4j.rootLogger=WARN,console,error,R,mybatis
+log4j.rootLogger=INFO,console,error,R,mybatis
 
 log4j.appender.encoding="utf-8"
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender 
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.Threshold = WARN 
+log4j.appender.console.Threshold = INFO 
 log4j.appender.console.layout.ConversionPattern=%d %-17c{2} - %m%n
 
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.Threshold=WARN 
+log4j.appender.R.Threshold=INFO 
 log4j.appender.R.ImmediateFlush=true
 log4j.appender.R.Append=true
 log4j.appender.R.File=${webapp.root}/logs/stip.log
@@ -18,7 +18,7 @@ log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.error.Threshold=WARN 
+log4j.appender.error.Threshold=INFO 
 log4j.appender.error.ImmediateFlush=true
 log4j.appender.error.Append=true
 log4j.appender.error.File=${webapp.root}/logs/error.log
@@ -29,11 +29,11 @@ log4j.appender.error.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %
 log4j.appender.mybatis = org.apache.log4j.ConsoleAppender 
 log4j.appender.mybatis.layout=org.apache.log4j.PatternLayout
 log4j.appender.mybatis.layout.ConversionPattern=%d %-17c - %m%n
-log4j.logger.org.apache.ibatis.logging.jdbc.BaseJdbcLogger=WARN
-log4j.logger.com.github.stip.net.dao=WARN
-log4j.logger.com.mybatis.common.jdbc.SimpleDataSource=WARN  
-log4j.logger.com.mybatis.common.jdbc.ScriptRunner=WARN  
-log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=WARN 
-log4j.logger.java.sql.Connection=WARN
-log4j.logger.java.sql.Statement=WARN
-log4j.logger.java.sql.PreparedStatement=WARN
+log4j.logger.org.apache.ibatis.logging.jdbc.BaseJdbcLogger=ERROR
+log4j.logger.com.github.stip.net.dao=INFO
+log4j.logger.com.mybatis.common.jdbc.SimpleDataSource=INFO  
+log4j.logger.com.mybatis.common.jdbc.ScriptRunner=INFO  
+log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO 
+log4j.logger.java.sql.Connection=INFO
+log4j.logger.java.sql.Statement=INFO
+log4j.logger.java.sql.PreparedStatement=INFO
